# kickstart-modular.nvim

./: init.lua
extras/: .tmux.conf  alacritty.toml  tmux.conf
lua/: keymaps.lua
lua/custom/plugins/: alpha-dashboard.lua  barbar.lua.bak  betterTerm.lua.bak  code-runner.lua.bak  editor.lua.bak  filetree.lua  init.lua  neo-tree.lua.bak  nvim-tree.lua  persistence.lua  toggleterm.lua  venv-selector.lua
lua/kickstart/plugins/: lspconfig.lua  which-key.lua
lua/kickstart/plugins/lsps/: pyproject.toml  ruff-lsp.toml
